  file. See also updated documentation about annotation cache at
  https://github.com/stubbles/stubbles-core/wiki/Annotations#annotation-cache
- Removed vendor/bin/clearCache. Due to changed annotation cache a generic
  mechanism for clearing the cache can't be provided any longer, applications
  have to implement their own solution.
- Removed support for post-install-cmd and post-update-cmd. You should remove
  any such entries in your composer.json.
- Removed package net\stubbles\cache, doesn't belong into core

Other changes:
- added ReflectionClass::forName()


2.1.3, 2012-12-28
==================
- changed net\stubbles\lang\types\datespan\Month to always use current month,
  also on first day of month
- added initial phar support to run stubbles-core from inside a phar
- added net\stubbles\lang\ResourceLoader::getRoot() to allow retrieval of root
  path in a non-static mockable call
- fixed notice about array to string conversion in
  net\stubbles\lang\StringRepresentationBuilder


2.1.2, 2012-08-29
==================
- added net\stubbles\peer\Uri::getQueryString()
- fixed line ending bug in net\stubbles\streams\memory\MemoryInputStream
- fixed net\stubbles\peer\http\HttpRequest to not ignore query string for GET
  and HEAD requests
- fixed bug in net\stubbles\peer\HeaderList with recognition of headers that
  contain a colon in their value


2.1.1, 2012-07-31
==================
- Removed hostname binding with posix, wasn't reliable enough


2.1.0, 2012-07-30
==================
- PropertiesBindingModule can now optionally bind current working directory
  with name net.stubbles.cwd
- PropertiesBindingModule can now optionaly bind current hostname, using
  net.stubbles.hostname.nq for non-qualified and net.stubbles.hostname.fq for
  qualified hostname
- implemented issue #33: allow adhoc binding module using closures
- implemented issue #31: allow binding to closures


2.0.0, 2012-05-22
==================
- Initial release.